--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -6,21 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".view.home.HomeActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="60dp"
+        android:background="@color/colorPrimaryDark"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+    <android.support.v4.widget.DrawerLayout
+        android:layout_marginTop="60dp"
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:openDrawer="start">
+
+        <include layout="@layout/content_drawer"/>
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/navigation_view"
+            app:menu="@menu/navigation_menu"
+            />
 
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    </android.support.v4.widget.DrawerLayout>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_activity_home" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
