--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,12 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="dimen_lbl">20sp</dimen>
+    <dimen name="wdt_75">75dp</dimen>
+    <dimen name="text_reg">14sp</dimen>
+    <dimen name="txt13">13sp</dimen>
+    <dimen name="buy_button_width">300dp</dimen>
+    <dimen name="buy_button_height">48sp</dimen>
+    <dimen name="buy_button_min_width">200dp</dimen>
+    <dimen name="txt18">18sp</dimen>
+    <dimen name="txt15">15sp</dimen>
 </resources>
