--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#f90e0e</color>
     <color name="white">#ffff</color>
     <color name="blue">#3857e1</color>
+    <color name="tranparentWhite">#a2ffffff</color>
 </resources>
