--- a/app/src/main/res/layout/confirmed_ticket.xml
+++ b/app/src/main/res/layout/confirmed_ticket.xml
@@ -117,6 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
+            android:id="@+id/event_container1"
             android:layout_margin="10dp"
             android:background="@drawable/rounded_border"
             android:orientation="horizontal">
@@ -207,6 +208,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
+            android:id="@+id/event_container2"
             android:layout_margin="10dp"
             android:background="@drawable/rounded_border"
             android:orientation="horizontal">
