--- a/app/src/main/res/layout/seat_item.xml
+++ b/app/src/main/res/layout/seat_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:id="@+id/seatItem">
 
     <ImageView
         android:id="@+id/seat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@mipmap/ic_contact_picture"
         />
     <TextView
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:text="0"
         android:textColor="@color/text_white"
-        android:layout_marginLeft="8dp"
-        android:textSize="20sp"
+        android:paddingTop="5dp"
+        android:layout_gravity="center_horizontal"
+        android:textSize="@dimen/text_reg"
         />
 </android.support.design.widget.CoordinatorLayout>
