--- a/app/src/main/res/layout/fragment_technology.xml
+++ b/app/src/main/res/layout/fragment_technology.xml
@@ -10,7 +10,7 @@
             android:textSize="30sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/technologies_used"/>
+            android:text="test"/>
     </ScrollView>
 
 </LinearLayout>
