--- a/app/src/main/res/layout/activity_seat_pick.xml
+++ b/app/src/main/res/layout/activity_seat_pick.xml
@@ -5,11 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.seatpick.SeatPick">
+    >
+
     <GridView
         android:id="@+id/seats"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:numColumns="5">
     </GridView>
+    <Button
+        android:id="@+id/submitSeats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/comfirm"/>
 </LinearLayout>
