--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -5,65 +5,83 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.home.HomeActivity"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    android:background="@drawable/foreground"
     android:layout_margin="10dp"
-    android:weightSum="1"
-    >
-
+    android:padding="@dimen/fab_margin"
+    android:weightSum="1">
     <SearchView
         android:id="@+id/searchLocation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1"
+        android:layout_weight="0.15"
         android:iconifiedByDefault="true"
         android:imeOptions="actionSearch"
         android:inputType="textCapWords"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@color/txtBlack"
         />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5" />
+        android:layout_weight="0.4" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_weight="0.3"
+        android:layout_weight="0.225"
+        android:layout_margin="@dimen/config_margin"
+        android:background="@drawable/rounded_border"
         android:weightSum="1">
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_margin="5dp"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/start"
+                android:id="@+id/from_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_gravity="start"
+                android:layout_gravity="start|center_vertical"
+                android:gravity="center_vertical"
                 android:layout_marginEnd="20dp"
-                android:textSize="30sp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="@dimen/txt18"
                 android:textColor="@color/text_black"
-                android:text="Leave"/>
+                android:text="From"/>
 
             <TextView
-                android:id="@+id/stareDate"
+                android:id="@+id/departure_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="@dimen/txt16"
                 android:textColor="@color/text_black"
-                android:layout_marginEnd="20dp"
-                android:layout_gravity="end"
+                android:drawablePadding="5dp"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/event_ic"
+                android:hint="Return Date"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="end|center_vertical"
                 />
 
         </android.support.design.widget.CoordinatorLayout>
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="0.1dp"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
             android:background="@color/txtBlack"
             />
 
@@ -71,24 +89,31 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_margin="5dp"
-            android:layout_height="wrap_content">
+            android:layout_height="50dp">
+
             <TextView
                 android:id="@+id/end"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_gravity="start"
-                android:layout_marginEnd="20dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="5dp"
+                android:layout_gravity="start|center_vertical"
+                android:layout_marginEnd="@dimen/txt15"
                 android:textColor="@color/text_black"
-                android:text="Arrive"
-                android:textSize="30sp" />
+                android:text="To"
+                android:textSize="@dimen/txt18" />
             <TextView
-                android:id="@+id/endDate"
+                android:id="@+id/arrival_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="@dimen/txt16"
+                android:drawablePadding="5dp"
+                android:drawableLeft="@drawable/event_ic"
                 android:textColor="@color/text_black"
-                android:layout_gravity="end"
+                android:hint="@string/arrival_date"
+                android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="20dp"
                 />
         </android.support.design.widget.CoordinatorLayout>
@@ -96,13 +121,16 @@
     </LinearLayout>
     <Button
         android:id="@+id/submit"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
+        android:visibility="visible"
+        android:background="@drawable/button_bg"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_gravity="center_horizontal"
         android:padding="10dp"
-        android:text="@string/go"
-        android:textSize="30sp"
+        android:text="Find Buses"
+        android:textSize="20sp"
         />
 
 </LinearLayout>
