--- a/app/src/main/res/layout/activity_seat_pick.xml
+++ b/app/src/main/res/layout/activity_seat_pick.xml
@@ -2,20 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="350dp"
     android:layout_height="match_parent"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical"
     >
-
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/steering"/>
     <GridView
         android:id="@+id/seats"
-        android:layout_width="250dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:numColumns="5">
     </GridView>
     <Button
         android:id="@+id/submitSeats"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/btn_checkout_bg"
+        android:textColor="#FFFFFF"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/comfirm"/>
